--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ POSTGRES_URL_NO_SSL=postgres://neondb_owner:crjTDhUL96MB@ep-lucky-king-a1j15cbk-
 POSTGRES_PRISMA_URL=postgres://neondb_owner:crjTDhUL96MB@ep-lucky-king-a1j15cbk-pooler.ap-southeast-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require
 
 # `openssl rand -base64 32`
-AUTH_SECRET=
+AUTH_SECRET=ZS1dHrruKGlKJj5c5Ag3tRzlT0LZZBGTmIbKP1pSYBg=
 AUTH_URL=http://localhost:3000/api/auth
