--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ POSTGRES_PRISMA_URL=postgres://neondb_owner:crjTDhUL96MB@ep-lucky-king-a1j15cbk-
 
 # `openssl rand -base64 32`
 AUTH_SECRET=ZS1dHrruKGlKJj5c5Ag3tRzlT0LZZBGTmIbKP1pSYBg=
-AUTH_URL=http://localhost:3000/api/auth
+AUTH_URL=https://nextjs-dashboard-kappa-fawn-12.vercel.app/dashboard
